# crypto

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  MainDistributionPipeline_v1.3.yml  scheduled-1.5.yml
docs/: README.md
duckdb_crypto_rust/: Cargo.toml
duckdb_crypto_rust/src/: lib.rs
src/: crypto_enc.cpp  crypto_extension.cpp  crypto_hash.cpp  query_farm_telemetry.cpp
src/include/: crypto_enc.hpp  crypto_extension.hpp  crypto_hash.hpp  query_farm_telemetry.hpp
test/memory/: README.md  test_algorithm_benchmark.sh  test_algorithm_memory_comparison.sql  test_memory_leak.sql
test/sql/: crypto.test  crypto_enc.test
